# Slope-SpaM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main  multi_fasta_file.fasta
paper/: create_graph.py
paper/reads/semi_artificial/: evaluate.py
src/: CMakeLists.txt  Slope_SpaM.cpp  args.hpp  config.cpp  config.hpp  config.test.cpp  filesystem.cpp  filesystem.hpp  generator.cpp  generator.hpp  main.cpp  math.hpp  simulate.cpp  spam.cpp  spam.hpp  spam.test.cpp  string.cpp  string.hpp  string.test.cpp
src/spam/: distance_matrix.cpp  distance_matrix.hpp  minhash.hpp  pattern.cpp  pattern.hpp  pattern.test.cpp  sequence.cpp  sequence.hpp  wordlist.cpp  wordlist.hpp  wordlist.test.cpp
